TEST_PROGRAMS/VALID/08/ifStatements.go
package main;
func main(){
    
    if x := true; x {

    }
    if (x) {

    }
    if x {

    }else{

    }
    if x {

    } else if (x) {

    } else{

    }
}
