TEST_PROGRAMS/INVALID/09/break_not_in_loop.go
package break_outside

func main() {
    if true {
        break;
    }
}
